--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,9 @@
 
         <!--netty-->
         <dependency>
-            <groupId>io.netty</groupId> <artifactId>netty-all</artifactId> <version>4.1.25.Final</version>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.25.Final</version>
         </dependency>
 
         <!--protostu-->
